--- a/static/style.scss
+++ b/static/style.scss
@@ -1,12 +1,22 @@
 html {
   font-family: 'Noto Sans JP', sans-serif;
+  height: 100%;
 }
 
 body {
+  height: 100%;
+}
+
+.root {
+  height: 100%;
+}
+
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 16px;
+  height: 100%;
 }
 
 .avator {
