--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   /* align-items: center; */
   font-weight: 16px;
 }
