--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,25 @@
-/* override materialize css */
+/**
+ * This overrides materialize css
+ * https://materializeweb.com/
+*/
 
 html {
-  /* font-family: 'Noto Sans JP', sans-serif; */
+  font-family: 'Noto Sans JP', sans-serif;
   height: 100%;
 }
 
 body {
+  display: flex;
+  max-width: 100vw;
+  min-height: 100vh;
+  flex-direction: column;
   padding: 1em 2em;
   color: white;
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 .avator {
@@ -19,12 +30,17 @@ body {
 
   img {
     height: 250px;
-    margin-bottom: 12px;
-    border-radius: 50%;
   }
 
   span {
-    text-align: center;
     font-size: 32px;
   }
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  bottom: 0;
+  overflow: hidden;
 }
