--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,8 @@ html {
 
 body {
   max-width: 100vw;
-  min-height: 100vh;
+  height: 100%;
+  min-height: 100%;
   padding: 1em 2em;
   color: white;
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
