--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,6 @@ body {
   max-width: 100vw;
   height: 100%;
   min-height: 100%;
-  padding: 1em 2em;
   color: white;
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
 }
@@ -25,4 +24,23 @@ body {
   span {
     font-size: 32px;
   }
+}
+
+.account {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  h2 {
+    font-size: 100px;
+  }
+
+  a {
+    color: white;
+  }
+}
+
+.subtitle {
+  color: white;
+  font-size: 24px;
 }
