--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,3 @@
-/**
- * This overrides materialize css
- * https://materializeweb.com/
-*/
-
 html {
   font-family: 'Noto Sans JP', sans-serif;
   height: 100%;
@@ -12,7 +7,6 @@ body {
   max-width: 100vw;
   height: 100%;
   min-height: 100%;
-  padding: 1em 2em;
   color: white;
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
 }
@@ -21,13 +15,32 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 32px;
 
   img {
     height: 250px;
+    border-radius: 50%;
   }
 
   span {
     font-size: 32px;
   }
+}
+
+.account {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  h2 {
+    font-size: 100px;
+  }
+
+  a {
+    color: white;
+  }
+}
+
+.subtitle {
+  color: white;
+  font-size: 24px;
 }
