--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ html {
 body {
   max-width: 100vw;
   height: 100%;
+  max-height: 100%;
   min-height: 100%;
   color: white;
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
