--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,15 @@
 html {
   font-family: 'Noto Sans JP', sans-serif;
-  height: 100%;
 }
 
-body {
+/* body {
   max-width: 100vw;
   height: 100%;
   max-height: 100%;
   min-height: 100%;
-  color: white;
+} */
+
+.hero {
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
 }
 
