--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,10 +22,6 @@ html {
     height: 250px;
     border-radius: 50%;
   }
-
-  span {
-    font-size: 32px;
-  }
 }
 
 .account {
@@ -33,16 +29,11 @@ html {
   align-items: center;
   flex-direction: column;
 
-  h2 {
-    font-size: 100px;
-  }
-
   a {
-    color: white;
+    /* color: black; */
   }
 }
 
 .subtitle {
-  color: white;
   font-size: 24px;
 }
