--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,13 +2,6 @@ html {
   font-family: 'Noto Sans JP', sans-serif;
 }
 
-/* body {
-  max-width: 100vw;
-  height: 100%;
-  max-height: 100%;
-  min-height: 100%;
-} */
-
 .hero {
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
 }
@@ -21,5 +14,16 @@ html {
   img {
     height: 250px;
     border-radius: 50%;
+  }
+}
+
+.custom-footer {
+  padding: 1.5rem;
+  color: white;
+  background-color: #607d8b;
+
+  a {
+    color: white;
+    font-weight: bold;
   }
 }
