--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
 html {
   font-family: 'Noto Sans JP', sans-serif;
-  height: 100%;
 }
 
-body {
-  max-width: 100vw;
-  height: 100%;
-  max-height: 100%;
-  min-height: 100%;
-  color: white;
+.hero {
   background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
 }
 
@@ -21,27 +15,15 @@ body {
     height: 250px;
     border-radius: 50%;
   }
-
-  span {
-    font-size: 32px;
-  }
 }
 
-.account {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-
-  h2 {
-    font-size: 100px;
-  }
+.custom-footer {
+  padding: 1.5rem;
+  color: white;
+  background-color: #607d8b;
 
   a {
     color: white;
+    font-weight: bold;
   }
-}
-
-.subtitle {
-  color: white;
-  font-size: 24px;
 }
